# bar

./: Cargo.toml  shell.nix
common/: Cargo.toml
common/src/: lib.rs  logging.rs
common/src/tui/: layout.rs  mod.rs
common/src/utils/: mod.rs
example-bar/: Cargo.toml  run
example-bar/src/: desktop.rs  main.rs  runner.rs
example-bar/src/clients/: hypr.rs  ppd.rs  pulse.rs  tray.rs  upower.rs
panel-controller/: Cargo.toml
panel-controller/src/: lib.rs  menu_watcher.py  monitors.rs
proc-mgr/: Cargo.toml
proc-mgr/src/: ipc.rs  lib.rs  main.rs
src/: controller2.rs  data.rs  display_panel.rs  logging.rs  main.rs  monitors.rs  simple_bar.rs  terminals.rs  tui.rs  utils.rs
src/clients/: clock.rs  displays.rs  hypr.rs  mod.rs  monitors.rs  ppd.rs  pulse.rs  tray.rs  upower.rs
src/modules/: fixed.rs  hypr.rs  mod.rs  ppd.rs  pulse.rs  time.rs  tray.rs  upower.rs
src/panels/: bar.rs  menu.rs  mod.rs  proc.rs
src/panels/bar/: manager.rs  mod.rs
src/procs/: bar_panel.rs  controller.rs  menu_panel.rs  mod.rs
src/procs/menu_panel/: menu_watcher.py
src/tui/: layout.rs  mod.rs  render.rs
src/utils/: channels.rs  dbg.rs  emit.rs  mod.rs  reload.rs  task.rs
