[package]
name = "bar-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
crossterm.workspace = true
flexi_logger.workspace = true
log.workspace = true
futures.workspace = true
image.workspace = true
serde.workspace = true

base64 = "0.22.1"
unicode-width = "0.2.2"
